Revision history for Dist-Zilla-Plugin-DynamicPrereqs

{{$NEXT}}

0.036     2020-01-27 00:25:40Z
          - use -nologo option for VC Perl (nmake) builds (in tests); (RT#131185
          and PR#2; thanks Graham Ollis!)
          - fix misidentified version in error message in requires(),
            *_requires() subs

0.035     2019-04-03 04:46:16Z
          - the result of parse_args() is now cached so it can be called
            multiple times with efficiency

0.034     2017-12-21 00:49:09Z
          - can_cc implementation updated to match
            Module::Install::Can::can_cc, by adding a code snippet for VMS

0.033     2017-04-30 18:58:42Z
          - documentation added regarding the lack of ability to use dynamic
            requires-recommends, requires-suggests etc
          - add is_miniperl() helper sub

0.032     2016-08-16 01:00:05Z
          - in _add_prereq sub, do not warn about prereq merging if the
            previous version being merged into was a mere "0"

0.031     2016-07-03 06:07:23Z (TRIAL RELEASE)
          - removed dependency on Dist::Zilla::Role::ModuleIncluder by
            inlining the necessary bits

0.030     2016-07-02 06:34:54Z
          - fixed a test that fails with newer ModuleIncluder, that changed
            the text of an error message

0.029     2016-05-06 19:40:13Z
          - temporarily work around Module::CoreList::is_core issue exposed by
            include_dependencies feature used in
            Dist::Zilla::Role::ModuleIncluder 0.005 and later

0.028     2016-05-05 00:53:13Z
          - fix test failure with MSWin32 path separators

0.027     2016-05-03 00:42:24Z (TRIAL RELEASE)
          - bundled an updated ExtUtils::HasCompiler for can_xs(), to support
            building with a noexec $TMPDIR.

0.026     2016-04-22 09:54:05Z (TRIAL RELEASE)
          - bump version of [MakeMaker::Awesome] needed for optional tests, to
            skip past some problematic changes to Makefile.PL whitespace
