@@ -13,6 +13,9 @@ use Dist::Zilla::Plugin::DynamicPrereqs;
 use Test::File::ShareDir
     -share => { -module => { 'Dist::Zilla::Plugin::DynamicPrereqs' => 'share/DynamicPrereqs' } };
 
+# since we change directories during the build process, this must be absolute
+use lib path('t/lib')->absolute->stringify;
+
 my $sub_prereqs = closed_over(\&Dist::Zilla::Plugin::DynamicPrereqs::register_prereqs)->{'%sub_prereqs'};
 my %loaded_subs;
 
@@ -41,16 +44,16 @@ sub load_sub
 
     {
         # pick something we know is available, but not something we have loaded
-        my $module = 'CPAN';
+        my $module = 'Inlined::Module';
 
         ok(!exists($INC{module_notional_filename($module)}), "$module has not already been loaded");
         my $got_version;
-        ok($got_version = has_module($module), "$module is installed; returned something true");
+        ok($got_version = has_module($module), "$module is installed; returned something true ($got_version)");
         is(has_module($module, '0'), 1, "$module is installed at least version 0");
         ok(!exists($INC{module_notional_filename($module)}), "$module has not been loaded by has_module()");
 
-        require CPAN;
-        is($got_version, MM->parse_version($INC{'CPAN.pm'}), 'has_version returned $CPAN::VERSION');
+        require Inlined::Module;
+        is($got_version, MM->parse_version($INC{'Inlined/Module.pm'}), 'has_version returned $Inlined::Module::VERSION');
     }
 
     {
